[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/targetno.png" type="Texture" id=1]
[ext_resource path="res://scripts/Target.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 114.989

[sub_resource type="CircleShape2D" id=2]
radius = 71.884

[sub_resource type="CircleShape2D" id=3]
radius = 32.9983

[node name="Target" type="Node2D"]
visible = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="OuterRim" type="Area2D" parent="."]
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterRim"]
shape = SubResource( 1 )

[node name="MidRim" type="Area2D" parent="."]
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidRim"]
position = Vector2( -0.722196, -1.05948 )
shape = SubResource( 2 )

[node name="InnerRim" type="Area2D" parent="."]
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InnerRim"]
position = Vector2( -1.68369, -1.12247 )
shape = SubResource( 3 )
